Fixed the blinking text of landing page on mobile

--- a/Landing Page/styles.css
+++ b/Landing Page/styles.css
@@ -603,6 +603,10 @@ nav {
 }
 
 @media (width < 600px) {
+  .container p {
+    font-size: 2.5rem;
+  }
+
   nav {
     position: fixed;
     width: 100%;
